--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 color: #1d2021;
             }
 
-            .copyright {
+            .no-copyright {
+                display: flex;
                 padding-left: 10px;
                 padding-bottom: 10px;
-                font-size: 12px;
-                flex: none;
+                justify-content: center;
+                font-size: 13px;
             }
-
         </style>
     </head>
     <body>
@@ -95,6 +95,6 @@
                 <li><a href="https://twitter.com/datalus">twitter.com</a></li>
             </ul>
         </div>
-        <span class="copyright">&copy; 2020 d.atal.us All Rights Reserved</span>
+        <span class="no-copyright">no copyright<span></span>
     </body>
 </html>
