adding some more links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             .links li { 
                 list-style: none; 
-                width: 180px; 
+                width: 110%; 
                 height: 64px; 
                 margin-bottom: 0.67em;
             }
@@ -75,26 +75,19 @@
             .links li a:hover {
                 color: #1d2021;
             }
-
-            .no-copyright {
-                display: flex;
-                padding-left: 10px;
-                padding-bottom: 10px;
-                justify-content: center;
-                font-size: 13px;
-            }
         </style>
     </head>
     <body>
         <div id="content">
             <h1>datalus@</h1>
             <ul class="links">
-                <li><a href="https://github.com/datalus">github.com</a></li>
                 <li><a href="https://datalus.itch.io">itch.io</a></li>
                 <li><a href="https://twitch.tv/datalustv">twitch.tv</a></li>
+                <li><a href="https://www.youtube.com/channel/UCF72ZM99dffPokhutweVNvA">youtube.com</a></li>
                 <li><a href="https://twitter.com/datalus">twitter.com</a></li>
+                <li><a href="https://soundcloud.com/datalus">soundcloud.com</a></li>
+                <li><a href="https://github.com/datalus">github.com</a></li>
             </ul>
         </div>
-        <span class="no-copyright">no copyright<span></span>
     </body>
 </html>
