--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             }
 
             body {
+				margin-top: 25px;
                 display: flex;
                 flex-direction: column;
                 font-family: Consolas, Monaco, Inconsolata, Droid Sans Mono, DejaVu Sans Mono, Arial;
@@ -33,7 +34,8 @@
                 display: flex;
                 flex-direction: column;
                 padding: 0;
-                margin: 0;
+				margin: 0;
+				margin-bottom: 25px;
             }
 
             .links li { 
@@ -75,6 +77,10 @@
             .links li a:hover {
                 color: #1d2021;
             }
+
+			.hidden { 
+				display: none;
+			}
         </style>
     </head>
     <body>
