adding some meta things

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width">
+		<meta charset="utf-8">
+		<meta name="description" content="2d game development">
+		<meta name="keywords" content="game development, 2d game development, pixel art, rust programming, c programming, rust, c">
+		<meta name="author" content="datalus">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>datalus</title>
         <style>
             html, body { 
