updating the meta

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
 		<meta charset="utf-8">
-		<meta name="description" content="2d game development">
-		<meta name="keywords" content="game development, 2d game development, pixel art, rust programming, c programming, rust, c">
+		<meta name="description" content="2d games made by datalus with a retro aesthetic.">
+		<meta name="keywords" content="datalus, datalus games, pixel art, handmade, retro">
 		<meta name="author" content="datalus">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>datalus</title>
