--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h1>datalus@</h1>
             <ul class="links">
                 <li><a href="https://datalus.itch.io">itch.io</a></li>
-                <li><a href="https://twitch.tv/datalustv">twitch.tv</a></li>
+                <li><a href="https://twitch.tv/datalusAI">twitch.tv</a></li>
                 <li><a href="https://www.youtube.com/channel/UCF72ZM99dffPokhutweVNvA">youtube.com</a></li>
                 <li><a href="https://twitter.com/datalus">twitter.com</a></li>
                 <li><a href="https://soundcloud.com/datalus">soundcloud.com</a></li>
