fixing tabs & re-ordering links alphabetically

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-		<meta charset="utf-8">
-		<meta name="description" content="2d games made by datalus with a retro aesthetic.">
-		<meta name="keywords" content="datalus, datalus games, pixel art, handmade, retro">
-		<meta name="author" content="datalus">
+        <meta charset="utf-8">
+        <meta name="description" content="2d games made by datalus with a retro aesthetic.">
+        <meta name="keywords" content="datalus, datalus games, pixel art, handmade, retro">
+        <meta name="author" content="datalus">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>datalus</title>
         <style>
@@ -14,7 +14,7 @@
             }
 
             body {
-				margin-top: 25px;
+                margin-top: 27px;
                 display: flex;
                 flex-direction: column;
                 font-family: Consolas, Monaco, Inconsolata, Droid Sans Mono, DejaVu Sans Mono, Arial;
@@ -39,13 +39,13 @@
                 display: flex;
                 flex-direction: column;
                 padding: 0;
-				margin: 0;
-				margin-bottom: 25px;
+                margin: 0;
+                margin-bottom: 25px;
             }
 
             .links li { 
                 list-style: none; 
-                width: 110%; 
+                width: 100%; 
                 height: 64px; 
                 margin-bottom: 0.67em;
             }
@@ -65,6 +65,7 @@
                 align-items: center;
                 width: 100%;
                 height: 100%;
+                padding: 0 10px;
                 font-weight: bold;
                 font-size: 24px;
                 color: #b8bb26;
@@ -83,21 +84,21 @@
                 color: #1d2021;
             }
 
-			.hidden { 
-				display: none;
-			}
+            .hidden { 
+                display: none;
+            }
         </style>
     </head>
     <body>
         <div id="content">
             <h1>datalus@</h1>
             <ul class="links">
-                <li><a href="https://datalus.itch.io">itch.io</a></li>
-                <li><a href="https://twitch.tv/datalusAI">twitch.tv</a></li>
-                <li><a href="https://www.youtube.com/channel/UCF72ZM99dffPokhutweVNvA">youtube.com</a></li>
-                <li><a href="https://twitter.com/datalus">twitter.com</a></li>
-                <li><a href="https://soundcloud.com/datalus">soundcloud.com</a></li>
                 <li><a href="https://github.com/datalus">github.com</a></li>
+                <li><a href="https://datalus.itch.io">itch.io</a></li>
+                <li><a href="https://soundcloud.com/datalus">soundcloud.com</a></li>
+                <li><a href="https://twitch.tv/datalusAI">twitch.tv</a></li>
+                <li><a href="https://twitter.com/datalus">twitter.com</a></li>
+                <li><a href="https://www.youtube.com/channel/UCF72ZM99dffPokhutweVNvA">youtube.com</a></li>
             </ul>
         </div>
     </body>
