changing twitch url

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li><a href="https://github.com/datalus">github.com</a></li>
                 <li><a href="https://datalus.itch.io">itch.io</a></li>
                 <li><a href="https://soundcloud.com/datalus">soundcloud.com</a></li>
-                <li><a href="https://twitch.tv/datalusAI">twitch.tv</a></li>
+                <li><a href="https://twitch.tv/datalus__">twitch.tv</a></li>
                 <li><a href="https://twitter.com/datalus">twitter.com</a></li>
                 <li><a href="https://www.youtube.com/channel/UCF72ZM99dffPokhutweVNvA">youtube.com</a></li>
             </ul>
