--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="2d games made by datalus with a retro aesthetic.">
-        <meta name="keywords" content="datalus, datalus games, pixel art, handmade, retro">
+        <meta name="description" content="trying to make low spec games, so far just tech demos">
+        <meta name="keywords" content="datalus, lospec, pixel art">
         <meta name="author" content="datalus">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>datalus</title>
         <style>
+            /* define global CSS vars */
+            :root {
+                --bg-color: #1d2021;
+                --fg-color: #d5d841;
+            }
+
             html, body { 
                 margin: 0;
                 padding: 0;
@@ -17,9 +23,9 @@
                 margin-top: 27px;
                 display: flex;
                 flex-direction: column;
-                font-family: Consolas, Monaco, Inconsolata, Droid Sans Mono, DejaVu Sans Mono, Arial;
-                background: #1d2021; 
-                color: #b8bb26; 
+                font-family: Consolas,Monaco,Inconsolata,'Droid Sans Mono','DejaVu Sans Mono',Arial,sans-serif;
+                background: var(--bg-color); 
+                color: var(--fg-color); 
                 width: 100%;
                 height: 100%;
             }
@@ -55,8 +61,8 @@
             }
 
             .links li:hover {
-                color: #1d2021;
-                background: #b8bb26;
+                color: var(--bg-color);
+                background: var(--fg-color);
             }
 
             .links li a { 
@@ -68,9 +74,9 @@
                 padding: 0 10px;
                 font-weight: bold;
                 font-size: 24px;
-                color: #b8bb26;
+                color: var(--fg-color);
                 text-decoration: none; 
-                border: 1px solid #b8bb26;
+                border: 1px solid var(--fg-color);
                 border-bottom: none;
                 box-sizing: border-box;
             }
@@ -81,7 +87,7 @@
             }
 
             .links li a:hover {
-                color: #1d2021;
+                color: var(--bg-color);
             }
 
             .hidden { 
@@ -91,7 +97,7 @@
     </head>
     <body>
         <div id="content">
-            <h1>datalus@</h1>
+            <h1>datalus =></h1>
             <ul class="links">
                 <li><a href="https://github.com/datalus">github.com</a></li>
                 <li><a href="https://datalus.itch.io">itch.io</a></li>
